Including personal modifications.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Portfolio</title>
+    <title>Edison Giraldo Aristizábal</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
@@ -48,9 +48,10 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Ryan Fitzgerald</h1>
-            <h2>Software Engineer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <h1>Edison Girado</h1>
+            <h2>Machine Learning Engineer | Physicist</h2>
+            <a href="https://drive.google.com/uc?export=download&id=1F_suvA1qhprgmNEAEwurtHVd0KzMyf7S" class="btn-rounded-white">Download Resume</a>
+            <a href="https://drive.google.com/file/d/1F_suvA1qhprgmNEAEwurtHVd0KzMyf7S/view?usp=sharing" class="btn-rounded-white">See online resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -73,9 +74,15 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                    Edison is a physicist currently preparing in machine learning. He considers himself a focused person and someone is worth it to work with.<br/><br/>
+
+                    Edison has a trasversal education. He has a background in mathematics and physics, he started to interact with the software and hardware world while being teacher assistant on his university where worked and learned electronics and Internet of Things for 2 and a half years.<br/><br/>
+
+                    These last two years (2020-2021), Edison has been focused on learning Software development basis as: Data structures, algorithms, C programming, Python, OOP, Linux, Systems Engineering/Devops and more. Especially since the end of the last year, he has been training on Machine Learning (ML) topics like Neural networks, computer vision, Hidden Markov models, Gaussian processes.<br/><br/>
+
+                    He worked as a software developer for 2 months at Truora, for a project in the academy he is studying. There, he worked developing an anonymous forum applying technologies as Vue, Aws services, Golang and Javascript. There, he experienced the work dynamics on a real company.<br/><br/>
+
+                    Finally, Edison expects finishing his studies on ML at the end of september. He is interested on AI companies and is open to remote work, feel free to contact him and thanks for your time.<br/><br/>
                     </p>
                 </div>
             </div>
@@ -86,27 +93,54 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="October 2020 – November 2020. (2 full months)">
+                <h3>Truora Inc.</h3>
+                <h4>Software Developer</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Development of a web forum:
+                    <ul>
+                        <li>
+                            Worked on designing the
+                            architecture for users register
+                            and authentication (AWS:
+                            Lambda, Cognito, DynamoDB).
+                        </li>
+                        <li>
+                            Designed and implemented the
+                            database for users data with Go
+                            and DynamoDB (AWS).
+                        </li>
+                        <li>
+                            Implemented the users
+                            authentication system with
+                            JavaScript and Cognito (AWS).
+                        </li>
+                    </ul>
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="August 2017 – December 2019">
+                <h3>Universidad de Antioquia</h3>
+                <h4>Teacher Assistant: Scientific and microelectronic Instrumentation</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
-            </div>
-
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Development of a web forum:
+                    <ul>
+                        <li>
+                            Programmed a system with
+                            Arduino to use more than 20
+                            sensors to measure sound
+                            intensity, magnetic field,
+                            temperature, etc.
+                        </li>
+                        <li>
+                            Taught students to implement
+                            experiments like RLC circuits to
+                            measure resonance curve with
+                            the use of tools like Labview,
+                            Arduino, and their simulation
+                            with pspice.
+                        </li>
+                    </ul>
                 </p>
             </div>
         </div>
@@ -115,29 +149,105 @@
 
     <div id="education">
         <h2 class="heading">Education</h2>
+
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-            </p>
+            <h3>Holberton School</h3>
+            <span class="education-date">November 2020 - September 2021</span>
+            <h4>Machine Learning</h4>
+            <ul>
+                <li>
+                    Implemented from scratch
+                    CNN's, RNN's, LSTM's, GRU's
+                    and Neural Networks.
+                </li>
+                <li>
+                    Built architectures like
+                    GoogleNet, ResNet,
+                    Transformers with Numpy,
+                    Tensorflow and Keras.
+                </li>
+                <li>
+                    Using just Numpy: Reduced
+                    data dimensions with PCA,
+                    applied clustering to data with
+                    k-means and Gaussian Mixture
+                    Models, inferred weather
+                    conditions from people
+                    clothes with Hidden Markov
+                    Models, optimized blackbox
+                    functions with Gaussian
+                    Processes, and created
+                    Autoencoders and variational
+                    autoencoders to encode
+                    MNIST images.
+                </li>
+                <li>
+                    Trained open-AI gym
+                    environments (FrozenLake,
+                    tetris breakout, CartPole) with
+                    RL algorithms like Q-learning,
+                    Deep Q-learning, policy
+                    Gradient.
+                </li>
+            </ul>
         </div>
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>Holberton School</h3>
+            <span class="education-date">January 2020 - October 2020</span>
+            <h4>Software Development</h4>
             <ul>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    C: functions, pointers, data
+                    structures, memory
+                    managment.
                 </li>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Linux: Basics, permissions,
+                    syscalls, command line.
                 </li>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Python: Object oriented
+                programming, test driven
+                development.
+                </li>
+                <li>
+                    Databases: MySQL, SQL.
+                </li>
+                <li>
+                    Web Developments: HTML,
+                    CSS, Javascript, JQuery,
+                    APIs(Flask) basics.
+                </li>
+                <li>
+                    SysEng/Devops: SSH, HTTP,
+                    servers, web servers, load
+                    balancers (proxy)
+                </li>
+            </ul>
+        </div>
+        <!-- End .education-block -->
+
+        <div class="education-block">
+            <h3>Universidad de Antioquia</h3>
+            <span class="education-date">March 2013 - December 2019</span>
+            <h4>Physics</h4>
+            <p>Topics seen there considered relevant for
+                Machine Learning:</p>
+            <ul>
+                <li>
+                    Linear Algebra
+                </li>
+                <li>
+                    Calculus
+                </li>
+                <li>
+                    Differential equations
+                </li>
+                <li>
+                    Partial differential equations
+                    and special functions.
                 </li>
             </ul>
         </div>
@@ -155,11 +265,13 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Printf replica</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Building in C language
+                            a replica of the printf
+                            function of standard library.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/blsoko/printf">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -171,11 +283,15 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>AirBnB replica</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Creation of clone of
+                            an early version of AirBnB
+                            page using MySQL, Flask,
+                            Python, HTML, CSS,
+                            JavaScript.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/Edigi12Hbtn/AirBnB_clone_v4">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -188,32 +304,16 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
-            <li>JavaScript</li>
             <li>Python</li>
-            <li>Ruby</li>
             <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
             <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>Tensorflow</li>
+            <li>Keras</li>
+            <li>Numpy</li>
+            <li>Pandas</li>
+            <li>LabVIEW</li>
+            <li>VHDL</li>
+            <li>Arduino</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -221,7 +321,7 @@
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
+            <form method="POST" action="https://formspree.io/edison.giraldoa12@gmail.com">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
@@ -237,7 +337,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2020 YOUR NAME
+                        Copyright &copy; 2021 Edison Giraldo.
                     </p>
                 </div>
                 <div class="col-sm-2 top">
@@ -248,22 +348,13 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/Edigi12Hbtn" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
+                            <a href="https://linkedin.com/in/edisongiraldoa/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                            <a href="https://twitter.com/EdisonGiraldoA1" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
